stdout_report.txt
(venv) PS D:\Web3Projects\devPipline> $env:NODE_OPTIONS="--openssl-legacy-provider"
>> Get-Content hardhat.config.mjs  # Vérifiez le contenu
>> npx hardhat --config hardhat.config.mjs compile
import { HardhatUserConfig } from "hardhat/config";

const config = {
  solidity: {
    version: "0.8.19",
    settings: {
      optimizer: {
        enabled: true,
        runs: 200
      }
    }
  },
  networks: {
    hardhat: {
      chainId: 1337
    }
  },
  paths: {
    sources: "./contracts",
    tests: "./tests",
    cache: "./cache",
    artifacts: "./artifacts"
  }
};

export default config;
An unexpected error occurred:

file:///D:/Web3Projects/devPipline/hardhat.config.mjs:1
import { HardhatUserConfig } from "hardhat/config";
         ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module 'hardhat/config' does not provide an export named 'HardhatUserConfig'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:177:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:260:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:543:26)
    at async importConfigFileWithTsxFallback (D:\Web3Projects\devPipline\node_modules\hardhat\src\internal\config-loading.ts:145:14)
    at async importUserConfig (D:\Web3Projects\devPipline\node_modules\hardhat\src\internal\config-loading.ts:80:20)
    at async main (D:\Web3Projects\devPipline\node_modules\hardhat\src\internal\cli\main.ts:130:24)
    at async file:///D:/Web3Projects/devPipline/node_modules/hardhat/dist/src/cli.js:21:1

If you think this is a bug in Hardhat, please report it here: https://hardhat.org/report-bug
(venv) PS D:\Web3Projects\devPipline> Write-Host "🔍 DIAGNOSTIC COMPLET" -ForegroundColor Cyan
>> Write-Host "=" * 50
>>
>> # 1. Variables
>> Write-Host "`n1. VARIABLES D'ENVIRONNEMENT:" -ForegroundColor Yellow
>> Write-Host "   NODE_OPTIONS: $env:NODE_OPTIONS"
>> Write-Host "   PWD: $(Get-Location)"
>>
>> # 2. Fichier de configuration
>> Write-Host "`n2. FICHIER DE CONFIGURATION:" -ForegroundColor Yellow
>> if (Test-Path "hardhat.config.mjs") {
>>     $size = (Get-Item "hardhat.config.mjs").Length
>>     Write-Host "   ✅ Existe ($size octets)" -ForegroundColor Green
>>
>>     # Vérifier le contenu
>>     $content = Get-Content "hardhat.config.mjs" -Raw
>>     if ($content -match "export default") {
>>         Write-Host "   ✅ Syntaxe ESM correcte" -ForegroundColor Green
>>     } else {
>>         Write-Host "   ❌ Mauvaise syntaxe (manque 'export default')" -ForegroundColor Red
>>     }
>> } else {
>>     Write-Host "   ❌ Fichier manquant" -ForegroundColor Red
>> }
>>
>> # 3. Structure des dossiers
>> Write-Host "`n3. STRUCTURE:" -ForegroundColor Yellow
>> @("contracts", "scripts", "tests") | ForEach-Object {
>>     if (Test-Path $_) {
>>         $count = (Get-ChildItem $_ -File | Measure-Object).Count
>>         Write-Host "   ✅ $_ ($count fichiers)" -ForegroundColor Green
>>     } else {
>>         Write-Host "   ❌ $_ manquant" -ForegroundColor Red
>>     }
>> }
>>
>> # 4. Contrats Solidity
>> Write-Host "`n4. CONTRATS:" -ForegroundColor Yellow
>> $solFiles = Get-ChildItem "contracts\*.sol" -ErrorAction SilentlyContinue
>> if ($solFiles) {
>>     $solFiles | ForEach-Object {
>>         $pragma = Get-Content $_.FullName | Select-String "pragma solidity"
>>         Write-Host "   ✅ $($_.Name) - $pragma" -ForegroundColor Green
>>     }
>> } else {
>>     Write-Host "   ❌ Aucun contrat trouvé dans contracts/" -ForegroundColor Red
>> }
>>
>> # 5. Test Hardhat
>> Write-Host "`n5. TEST HARHAT:" -ForegroundColor Yellow
>> try {
>>     $version = npx hardhat --version 2>&1
>>     Write-Host "   ✅ Version: $version" -ForegroundColor Green
>> } catch {
>>     Write-Host "   ❌ Erreur: $_" -ForegroundColor Red
>> }
>>
>> Write-Host "`n" + "=" * 50
🔍 DIAGNOSTIC COMPLET
= * 50

1. VARIABLES D'ENVIRONNEMENT:
   NODE_OPTIONS: --openssl-legacy-provider
   PWD: D:\Web3Projects\devPipline

2. FICHIER DE CONFIGURATION:
   ✅ Existe (406 octets)
   ✅ Syntaxe ESM correcte

3. STRUCTURE:
   ✅ contracts (3 fichiers)
   ✅ scripts (7 fichiers)
   ✅ tests (2 fichiers)

4. CONTRATS:
   ✅ Lock.sol - pragma solidity ^0.8.19;
   ✅ SimpleNFT.sol - pragma solidity 0.8.19;
   ✅ SimpleTest.sol - pragma solidity 0.8.19;

5. TEST HARHAT:
   ✅ Version: 3.1.3

 + = * 50
(venv) PS D:\Web3Projects\devPipline> Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
>> .\scripts\VersionsInstallees.ps1
=== VERSIONS INSTALLÉES ===

📦 Node.js & npm:
v22.10.0
10.9.0

⚡ Hardhat:
3.1.3

📁 Dépendances principales:
hardhat : 3.1.3
@nomicfoundation/hardhat-toolbox : 2.0.2
@openzeppelin/contracts : 4.9.6
ethers : 6.16.0
dotenv : 16.6.1

📊 Toutes les dépendances:
  devpipeline@1.0.0 D:\Web3Projects\devPipline
  +-- @nomicfoundation/hardhat-ethers@4.0.4 invalid: "^3.1.0" from the root project
  +-- @nomicfoundation/hardhat-toolbox@2.0.2
  +-- @nomicfoundation/hardhat-verify@3.0.8
  +-- @openzeppelin/contracts@4.9.6
  +-- @types/node@20.19.29
  +-- chai@4.5.0
  +-- dotenv@16.6.1
  +-- ethers@6.16.0
  +-- hardhat@3.1.3
  `-- ts-node@10.9.2
(venv) PS D:\Web3Projects\devPipline>